# ROS-2-Exercises

./: README.md  vector_field_example.py
basic_path_planning/: CMakeLists.txt  package.xml
basic_path_planning/include/basic_path_planning/: my_path_planning.hpp
basic_path_planning/src/: my_path_planning_main.cpp  my_path_planning_node.cpp
lidar_data/: analyse_lidar_data.ipynb  d.py  front_laser_points.csv  front_laser_transform.npy  rear_laser_points.csv  rear_laser_transform.npy
my_ik_solver/: .gitignore  package.xml  setup.cfg  setup.py
my_ik_solver/Jacobian_calculator/: calculate_rotational_jacobian.py  jacobian_calculator.py
my_ik_solver/launch/: my_inverse_publisher.py
my_ik_solver/my_ik_solver/: jacobian_A_P_function.py  my_inverse_main.py  my_inverse_node.py  my_subscriber_example.py  ur_position_vector.py
my_vector_field/: CMakeLists.txt  package.xml
my_vector_field/include/my_vector_field/: static_vector_field.hpp
my_vector_field/scripts/: lidar_data.py  tf_finder.py
my_vector_field/src/: odom_publisher.cpp  static_vector_field_main.cpp  static_vector_field_node.cpp
rviz_marker_controller/: CMakeLists.txt  package.xml
rviz_marker_controller/include/rviz_marker_controller/: rviz_marker_definitions.hpp
rviz_marker_controller/src/: rviz_marker_main.cpp  rviz_marker_node.cpp
